protocols/tests/identities/dual_identity_d1/values_disagree.out
error: `dut.b` is not an output field of the struct `dut`
                        (Only output fields are allowed to appear in conditions in if-statements / while-loops)
   ┌─ identities/dual_identity_d1/dual_identity_d1.prot:38:9
   │
38 │     if (dut.b == b) {
   │         ^^^^^ `dut.b` is not an output field of the struct `dut`
                        (Only output fields are allowed to appear in conditions in if-statements / while-loops)

